--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@
 # docker run --rm -e SONAR_HOST_URL="https://sonarcloud.io/" -e SONAR_LOGIN="cd5ab414083f030c66c3f46479311275c03fac45" -v "/home/faruk/Desktop/EPSI-COURS/jenkinsDocker/Example-Spring-App:/usr/src" sonarsource/sonar-scanner-cli
 
 
-docker run --rm -e SONAR_HOST_URL="https://sonarcloud.io/" -e SONAR_LOGIN="cd5ab414083f030c66c3f46479311275c03fac45" -v "/home/faruk/Desktop/EPSI-COURS/jenkinsDocker/Example-Spring-App:/usr/src" sonarsource/sonar-scanner-cli
+docker run --rm -e SONAR_ddHOST_URL="https://sonarcloud.io/" -e SONAR_LOGIN="cd5ab414083f030c66c3f46479311275c03fac45" -v "/home/faruk/Desktop/EPSI-COURS/jenkinsDocker/Example-Spring-App:/usr/src" sonarsource/sonar-scanner-cli
 
 sonar.projectKey=jenkin-projects
 sonar.organization=epsii
